--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="rupee">%1$s</string>
     <string name="title_activity_parcel_info">ParcelInfoActivity</string>
+    <string name="title_activity_my_work">MyWorkActivity</string>
 
 </resources>
